Add Password Reset And Social Event Notifications
